--- a/stylesheet.css
+++ b/stylesheet.css
@@ -246,14 +246,14 @@ a:visited {
 	font-size: 50px;
 	letter-spacing: 15px;
 	font-weight: normal;
-	padding: 20px 20px 0px 20px;
+	padding: 20px 20px 0px 20%;
 }
 
 #top ul {
 	display: inline-flex;
 	list-style: none;
 	text-align: center;
-	margin-left: 5%;
+	margin-left: 25%;
 }
 
 #top li {
